working on issue of image getting too tall for window

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 .container {
   min-height: 200px;
-  max-width: 970px;
+  max-width: 900px;
   border: 1px solid grey;
   padding: 20px 25px;
   border-radius: 25px;
